# fast_game_of_life

./: Cargo.toml  README.md
.cargo/: config.toml
src/: b_matrix_vector.rs  bmatrix.rs  bmatrix_vector.rs  fsubview.rs  main.rs  patterns.rs  setup.rs  user.rs
src/b_matrix/: b_matrix_vector.rs  engine.rs  mod.rs  sync_utils.rs
