[package]
name = "CGOL"
version = "0.1.0"
authors = ["Benson Li <bensonbinbinli@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = 0
overflow-checks = true
panic = 'unwind'
lto = false
incremental = true
codegen-units = 256
rpath = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez="*"
nalgebra="*"
