[package]
name = "CGOL"
version = "0.1.0"
authors = ["Benson Li <bensonbinbinli@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = 0
overflow-checks = true
panic = 'unwind'
lto = false
incremental = true
codegen-units = 256
rpath = false


[profile.dev]
opt-level = 0
debug = 0
debug-assertions=true
overflow-checks = true
panic = 'unwind'
lto = false
incremental = true
codegen-units = 256
rpath = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 0
debug = true
debug-assertions=true
overflow-checks = true
panic = 'unwind'
lto = false
incremental = true
codegen-units = 256
rpath = false

[dependencies]
ggez="*"
nalgebra="*"
rand="*"

#[target.x86_64-unknown-linux-gnu]
#rustflags = [
    #"-C", "link-arg=-fuse-ld=lld",
#]
